--- a/client/src/components/auth/signup.module.css
+++ b/client/src/components/auth/signup.module.css
@@ -59,6 +59,10 @@
   font-size: 1.2rem;
 }
 
+.inputGroup input.redBorder {
+  border: 0.1rem solid #fb133a;
+}
+
 .inputGroup label {
   position: absolute;
   bottom: 1.5rem;
@@ -68,6 +72,11 @@
   font-size: 1.5rem;
   pointer-events: none;
   transition: all 0.3s ease;
+}
+
+.error {
+  color: #fb133a;
+  margin-left: 2rem;
 }
 
 .signupBtn {
