Added css variables for colors and SortPosts component

--- a/client/src/components/auth/login/login.module.css
+++ b/client/src/components/auth/login/login.module.css
@@ -13,7 +13,7 @@
 }
 
 .login {
-  background: #fff;
+  background: var(--white);
   width: 80vw;
   max-width: 40rem;
   border-radius: 1rem;
@@ -26,7 +26,7 @@
   top: 2rem;
   right: 2rem;
   font-size: 2rem;
-  color: #878a8c;
+  color: var(--dark-gray);
   cursor: pointer;
 }
 
@@ -43,7 +43,7 @@
   font-size: 1.5rem;
   border-radius: 3rem;
   border: none;
-  background-color: #f6f7f8;
+  background-color: var(--light-gray);
   padding-left: 1.5rem;
 }
 
@@ -86,15 +86,15 @@
   width: 100%;
   border: none;
   cursor: pointer;
-  background-color: #dc4a14;
-  color: #fff;
+  background-color: var(--orange);
+  color: var(--white);
   padding: 1rem 0;
   border-radius: 3rem;
   font-weight: 700;
 }
 
 .loginBtn:hover {
-  background-color: #ff7417;
+  background-color: var(--light-orange);
 }
 
 .loginContainer p {
@@ -102,7 +102,7 @@
 }
 
 .loginContainer span {
-  color: #0079d3;
+  color: var(--blue);
   font-weight: 700;
   text-decoration: underline;
   cursor: pointer;
