--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,14 @@
+:root {
+  --orange: #ff4500;
+  --light-orange: #ff5414;
+  --blue: #0079d3;
+  --light-blue: #1484d6;
+  --dark-gray: #878a8c;
+  --gray: #dae0e6;
+  --light-gray: #edeff1;
+  --white: #ffffff;
+}
+
 *,
 *::before,
 *::after {
