--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,10 +1,8 @@
 :root {
-  --orange: #ff4500;
-  --light-orange: #ff5414;
-  --blue: #0079d3;
-  --light-blue: #1484d6;
-  --dark-gray: #878a8c;
-  --gray: #dae0e6;
+  --blue: #1877f2;
+  --light-blue: #0095f6;
+  --dark-gray: #737373;
+  --gray: #efefef;
   --light-gray: #edeff1;
   --white: #ffffff;
 }
