--- a/client/src/components/header/header.module.css
+++ b/client/src/components/header/header.module.css
@@ -1,80 +1,87 @@
-.wrapper {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+@font-face {
+  font-family: "Baille Simpson DEMO";
+  src: url("/public/fonts/Baillesimpsondemo-lg58V.otf");
+}
+
+.header {
+  border-bottom: 1px solid #dbdbdb;
+  padding: 0.8rem;
+  position: fixed;
   background-color: var(--white);
+  width: 100%;
+}
+
+.navbar {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  max-width: 1000px;
+  margin: auto;
 }
 
 .logo {
+  font-family: "Baille Simpson DEMO", sans-serif;
   font-size: 2rem;
-  margin: 1rem 2rem;
-}
-
-.logo i {
-  color: var(--orange);
+  letter-spacing: 0.2rem;
+  font-weight: 700;
+  cursor: pointer;
 }
 
 .search {
-  width: 30%;display: flex;
+  background-color: var(--gray);
+  display: flex;
   align-items: center;
-  position: relative;
+  justify-content: center;
+  padding: 0 1rem;
+  border-radius: 10px;
 }
 
-.search i {
-  position: absolute;
-  left: 1.5rem;
-  font-size: 2rem;
-  color: #757575;
+.search label {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .search input {
-  width: 100%;
-  padding: 1rem 1rem 1rem 4rem;
-  background-color: var(--light-gray);
-  border: .1rem solid #ebf1f8;
-  border-radius: 3rem;
-  font-size: 1.6rem;
+  background-color: inherit;
+  color: var(--dark-gray);
+  border: none;
+  padding: 1rem;
+  font-size: 1.5rem;
+  outline: none;
 }
 
-.search input:hover {
-  border-color: var(--blue);
-}
-
-.signupBtn {
-  color: var(--blue);
-  background: #fff;
-  border: .1rem solid var(--blue);
-  border-radius: 3rem;
-  padding: .8rem 3rem;
+.btn {
+  font-size: 1.5rem;
   font-weight: 600;
-  font-size: 1.4rem;
-  margin-right: 2rem;
   cursor: pointer;
 }
 
-.signupBtn:hover {
-  background-color: #f1f7ff;
-}
-
-.loginBtn {
-  color: #fff;
-  background: var(--blue);
-  border: .1rem solid var(--blue);
-  border-radius: 3rem;
-  padding: .8rem 3rem;
-  font-weight: 600;
-  font-size: 1.4rem;
-  margin-right: 2rem;
-  cursor: pointer;
-}
-
-.loginBtn:hover {
+.btn.loginBtn {
   background-color: var(--light-blue);
+  color: #fff;
+  border: none;
+  padding: 0.8rem 1.2rem;
+  margin-right: 0.6rem;
+  border-radius: 10px;
 }
 
-@media(max-width: 700px) {
-  .logo span {
+.btn.btn.loginBtn:hover {
+  background-color: var(--blue);
+}
+
+.btn.signupBtn {
+  background-color: inherit;
+  color: var(--light-blue);
+  border: none;
+}
+
+.btn.btn.signupBtn:hover {
+  color: #90d1fb;
+}
+
+@media (max-width: 640px){
+  .search {
     display: none;
   }
 }
